assets/css/style.css
/* TODO:
    Nice to have: user can changes these colors in settings*/
:root {
    --primary: #bfbbda;
    --secondary: #bee0b8;
    --tertiary: #3456c5;
    --modal: #bec7ec;
    --dark: #201917;
    --transition-duration: 0.4s;
    touch-action: pan-x pan-y;      /* should prevent zoom on mobile */
    height: 100%;                   /* should prevent zoom on mobile */
}

/* TODO:
    Nice to have: user can select font in settings*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

/* COLORS */
body {
    background-color: var(--primary);
    color: var(--dark)
}

.modal-card-body {
    background-color: var(--modal);
}

/* HAMBURGER MENU */
#menu-toggle {
    opacity: 0;
}

#menu-toggle:checked + .menu-btn > span {
    transform: rotate(45deg);
}

#menu-toggle:checked + .menu-btn > span::before {
    top: 0;
    transform: rotate(0deg);
}

#menu-toggle:checked + .menu-btn > span::after {
    top: 0;
    transform: rotate(90deg);
}

#menu-toggle:checked ~ .menu-box {
    right: 0;
}

.menu-btn {
    position: fixed;
    top: 20px;
    right: 20px;
    width: 26px;
    height: 26px;
    z-index: 100;
}

.menu-btn > span,
.menu-btn > span::before,
.menu-btn > span::after {
    display: block;
    position: absolute;
    width: 100%;
    height: 2px;
    background-color: var(--dark);
    transition-duration: var(--transition-duration);
}

.menu-btn > span::before {
    content: '';
    top: -8px;
}

.menu-btn > span::after {
    content: '';
    top: 8px;
}

.menu-box {
    display: block;
    position: fixed;
    top: 0;
    right: -100%;
    width: 300px;
    height: 100%;
    margin: 0;
    padding: 80px 0;
    list-style: none;
    background-color: var(--secondary);
    box-shadow: 2px 2px 6px rgba(0, 0, 0, .8);
    transition-duration: var(--transition-duration);
    z-index: 99;
}

.menu-item {
    display: block;
    padding: 12px 24px;
    font-size: 20px;
    font-weight: 600;
}

.menu-item:active {
    background-color: var(--primary);
}

#space {
    content: "";
    display: block;
    border-bottom: 2px solid var(--dark);
    width: 85%;
    margin: 5% auto;
}

/* FOOTER */
footer section {
    font-size: 20px;
    font-weight: 600;
}

/* CONTENT CARD */
.content-card {
    margin: 1%;
}
.content-card i {
    color: red;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, .5);
}

